--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div id="last-name-error" class="error"></div>
                     </label>
                     <label for="email">EMAIL</label>
-                    <input type="email" id="mail" name="email" required autocomplete="off">
+                    <input type="email" id="email" name="email" required autocomplete="off">
                     <div id="email-error" class="error"></div>
                     </label>
                     <label for="phonenumber">PHONE NUMBER</label>
@@ -58,6 +58,92 @@
             </div>
         </div>
     </div>
+    <script>
+        const firstname = document.querySelector('#firstname');
+        const firstnameError = document.querySelector('#first-name-error');
+        const lastname = document.querySelector('#lastname');
+        const lastnameError = document.querySelector('#last-name-error');
+        const email = document.querySelector('#email');
+        const emailError = document.querySelector('#email-error');
+        const tel = document.querySelector('#phonenumber');
+        const telError = document.querySelector('#tel-error');
+        const pw = document.querySelector('#password');
+        const pwC = document.querySelector('#passwordC');
+        const pwError = document.querySelector('#password-error');
+        const pwCError = document.querySelector('#passwordC-error');
+
+        firstname.addEventListener('input', function (event) {
+            if(firstname.value === '') {
+                firstnameError.textContent = '*Please type in your first name.';
+            } else {
+                firstnameError.textContent = '';
+            }
+        });
+
+        lastname.addEventListener('input', function (event) {
+            if(lastname.value === '') {
+                lastnameError.textContent = '*Please type in your last name.';
+            } else {
+                lastnameError.textContent = '';
+            }
+        });
+
+        email.addEventListener("input", function (event) {
+            if (email.validity.typeMismatch) {
+                emailError.textContent = '*Please enter in a valid Email.';
+            } else {
+                emailError.textContent = '';
+            }
+         });
+
+         tel.addEventListener('input', function (event) {
+            if (tel.validity.patternMismatch) {
+                telError.textContent = '*Please enter in a 10 digit number.';
+            }
+         });
+
+         pw.addEventListener('input', function (event) {
+            if (pw.validity.patternMismatch) {
+                const currentValue = pw.value;
+                const regExpCap = /[A-Z]/g;
+                const regExpDig = /[0-9]/g;
+                let result = '';
+                
+                if(regExpCap.test(currentValue)) {
+                    result += '';
+                } else {
+                    result += `*1 capital letter.`;
+                    result += '\n'
+                }
+
+                if(regExpDig.test(currentValue)) {
+                    result += '';
+                } else {
+                    result += '*1 number.';
+                    result += '\n'
+                }
+
+                if(currentValue.length < 9) {
+                    result += '*8 characters.';
+                    result += '\n';
+                } else {
+                    result += '';
+                }
+                    console.log(result);
+                    pwError.textContent = result;
+                } else {
+                    pwError.textContent = '';
+                }
+            });
+
+            pwC.addEventListener('input', function (event) {
+                if (pwC.currentValue !== pw.value) {
+                    pwCError.textContent = '*Passwords do not match';
+                } else {
+                    pwCError.textContent = '';
+                }
+            });        
+    </script>
 </body>
 </html>
 
