updated image src

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="form-selection">
         <div>
         <div class="header">
-            <img src="./imgs/logo.png" alt="Logo">
+            <img src="./images/logo.png" alt="Logo">
         <div>
             <p class="intro">Join one of the leading experts in the FX Market today. We pride ourselves in the analysis we provide and our oversimplied approach to the market. </p>
         </div>
